# rof

./: LICENSE  README.md
example_objects/: color.rof  computer.rof  test.rof  user.rof
js/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
js/object_format/: ignore_string_split.mjs  ignore_string_split.mts
js/object_format/data_value/: data_value.ts  data_value_array.mts  data_value_bool.mjs  data_value_bool.mts  (+1 more)
rs/: Cargo.toml  README.md
rs/core/: Cargo.toml
rs/core/src/: lib.rs
rs/core/src/object_format/: ignore_str_split.rs  mod.rs  string_escaper.rs
rs/core/src/rof_compat/inbuilt_type_extensions/: array_ext.rs  char_ext.rs  enum_ext.rs  string_ext.rs
rs/macros/: Cargo.toml
rs/macros/src/: lib.rs
rs/src/: lib.rs
rs/src/object_format/: mod.rs  rof.rs
rs/src/object_format/data_value/: array.rs  bool.rs  character.rs  enum_value.rs  hashmap.rs  struct_value.rs
rs/src/rof_compat/: mod.rs
rs/src/rof_compat/inbuilt_type_extensions/: bool_ext.rs  int_ext.rs  mod.rs  string_ext.rs
rust/: Cargo.toml
rust/core/: Cargo.toml
rust/core/src/object_format/: ignore_str_split.rs  mod.rs  rof.rs
rust/core/src/object_format/data_value/: array.rs  character.rs  enum_value.rs  float.rs  hashmap.rs  integer.rs  mod.rs  string.rs  struct_value.rs  tuple.rs
rust/core/src/object_format/property/: mod.rs
rust/core/src/object_format/property/property_type/: mod.rs
rust/core/src/rof_compat/: mod.rs
rust/core/src/rof_compat/inbuilt_type_extensions/: float_ext.rs  hashmap_ext.rs  mod.rs
rust/macros/: Cargo.toml
rust/macros/src/: lib.rs
rust/src/: lib.rs
test/js/: index.js  package-lock.json  package.json
test/rs/: Cargo.toml
(+5 files in other folders)
