[package]
name = "rof-rs"
description = "Rust Object Format API for Rust."
version = "0.1.7"
edition = "2021"
license="ISC"
repository="https://github.com/Jamzy01/rof"
readme="./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rof_rs_macros = "0.1.3"