[package]
name = "rust_object_format"
description = "Rust Object Format API for Rust."
version = "0.1.0"
edition = "2021"
license="AGPL-3.0 license"
repository="https://github.com/Jamzy01/rof"
readme="../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rof_rs_core = { path = "./core", version = "0.1.0" }
rof_rs_macros = { path = "./macros", version= "0.1.0" }